# node-autoit-opencv-com

./: .gitignore  README.md  package-lock.json  package.json  project.sublime-project
autoit-addon/: CMakeLists.txt  DeviceInfo.cpp  DeviceInfo.h  addon.au3  addon.cpp  addon.h  addon_utils.au3  addondef.h  autoitdef.h  build.bat  test_addon.cc  vector_DeviceInfo.au3  vector_DeviceInfo.cpp  vector_DeviceInfo.h
autoit-opencv-com/: CMakeLists.txt  build.bat  install.bat
autoit-opencv-com/cmake/: FindPatch.cmake  RequireOpenCV.cmake  extract_opencv.cmake  git_patch_once.cmake  vcpkg_regex_replace_string.cmake
autoit-opencv-com/dotnet/: OpenCvComInterop.cs
autoit-opencv-com/dotnet/Properties/: AssemblyInfo.cs
autoit-opencv-com/patches/: 001-opencv-src.patch
autoit-opencv-com/src/: autoit_bridge.cpp  autoit_bridge.h  autoit_bridge_common.cpp  autoit_bridge_common.h  autoit_def.h  cv.cpp  cv.def  cv.h  cvLib.rc  cv_extended.cpp  cvextra.h  dllmain.cpp  dllmain.def  dllmain.h  impl_cv.cpp  impl_cv.h  impl_mat.cpp  impl_mat.h  mat_c.cpp  targetver.h  umat_c.cpp  vectors_c.h
autoit-opencv-com/src/contrib/: cv_extra.cpp  cv_extra.h  imgproc_extra.cpp  imgproc_extra.h  mat_extra.cpp  mat_extra.h  templmatch_extra.cpp
autoit-opencv-com/src/wgc/: SimpleCapture.cpp  SimpleCapture.h  direct3d11.interop.h  pch.h
autoit-opencv-com/test/: test.cpp  test.cs  test.h
autoit-opencv-com/udf/: cv_enums.au3  cv_interface.au3  docs.md  docs.txt  opencv_udf.au3  opencv_udf_utils.au3
opencv/: .gitignore  CMakeLists.txt
samples/: 01-show-image.au3  02-show-image-gui.au3  02.1-show-image-gui-autosize.au3  03-show-screen-image.au3  04-find-template.au3  05.1-video-capture-camera.au3  05.2-video-capture-file.au3  06.1-rotate-image.au3  06.2-rotate-image-bound.au3  07-resize-with-gdi-plus.au3  08-drawing-contours.au3  09-find-image-on-screen.au3  10-PixelSearch-PixelChecksum.au3  Table.au3  samples.ps1  samples.xlsm
samples/autoit/: kalman.au3
samples/data/: alphabet_94.txt  essential_mat_data.txt
samples/data/dnn/: enet-classes.txt  object_detection_classes_coco.txt
samples/dnn/object_detection/: download_model.ps1  download_model.py  models.yml  object_detection.au3  object_detection.py
samples/dotnet/: 01-show-image.cs  01-show-image.ps1  02-video-capture-camera.cs  02-video-capture-camera.ps1  03-video-capture-file.cs  03-video-capture-file.ps1  04-rotate-image.cs  04-rotate-image.ps1  05-drawing-contours.cs  05-drawing-contours.ps1  OpenCvComInterop.cs  csrun.bat  csrun.ps1  opencv_utils.psm1
samples/tutorial_code/Histograms_Matching/: EqualizeHist_Demo.au3  MatchTemplate_Demo.au3  calcBackProject_Demo1.au3  calcHist_Demo.au3  compareHist_Demo.au3
samples/tutorial_code/ImgProc/: Threshold_inRange.au3
samples/tutorial_code/ImgProc/Smoothing/: Smoothing.au3
samples/tutorial_code/ImgProc/changing_contrast_brightness_image/: changing_contrast_brightness_image.au3
samples/tutorial_code/ImgProc/morphology/: morphology.au3
samples/tutorial_code/ShapeDescriptors/bounding_rotated_ellipses/: generalContours_demo2.au3
samples/tutorial_code/core/AddingImages/: AddingImages.au3
samples/tutorial_code/core/discrete_fourier_transform/: discrete_fourier_transform.au3
samples/tutorial_code/extra/: Find-Contour-Draw-Demo.au3  MultiMatchTemplate_Demo.au3  ScaledMatchTemplate_Demo.au3
samples/tutorial_code/features2D/: AKAZE_match.au3
samples/tutorial_code/features2D/feature_homography/: matching_homography_Demo.au3
samples/tutorial_code/imgcodecs/: animations.au3
samples/tutorial_code/object_detection/: download_model.ps1  models.yml  object_detection.au3  object_detection_classes_coco.txt
samples/tutorial_code/pyimagesearch/detect_color/: detect_color.au3
samples/tutorial_code/pyimagesearch/detect_shapes/: detect_shapes.au3
samples/tutorial_code/pyimagesearch/find_shapes/: find_shapes.au3
samples/tutorial_code/pyimagesearch/opencv_haar_cascades/: opencv_haar_cascades.au3
samples/tutorial_code/pyimagesearch/scan/: scan.au3  scan.py
samples/tutorial_code/pyimagesearch/test_grader/: test_grader.au3
samples/tutorial_code/tapi/: bgfg_segm.au3
samples/tutorial_code/yolo/: yolo.au3  yolo.py
scripts/: build.js  func_kwargs.js  manual.sh  tasks.sh  test.js  version.js
src/: AutoItGenerator.js  COMGenerator.js  CoClass.js  DeclProcessor.js  FileUtils.js  FunctionDeclaration.js  MidlCompiler.js  Properties.js  PropertyDeclaration.js  alias.js  constants.js  conversion.js  custom_conversions.js  custom_declarations.js  dependencies.js  doctoc.js  gen.js  ids.json  map_conversion.js  optional_conversion.js  options.js  point_conversion.js  rect_conversion.js  size_conversion.js  vec_conversion.js  vector_conversion.js
src/conversions/: Mat.js  point.js  rect.js  size.js  vec.js
src/declarations/: HostMem.js  Mat.js  Matx.js  RNG.js  Range.js  RotatedRect.js  TermCriteria.js  UMat.js  cv.js  mutex.js  shadow_gapi.js  structures.js
